fixed branch behind

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,4 +1,27 @@
-* {
-    color:black;
+/* Add a black background color to the top navigation */
+.nav {
+    background-color: #333;
+    overflow: hidden;
+  }
 
-}
+  /* Style the links inside the navigation bar */
+  .nav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  /* Change the color of links on hover */
+  .nav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  /* Add a color to the active/current link */
+  .nav a.home {
+    background-color: #04AA6D;
+    color: white;
+  } 
